# docs-to-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
src/docs_to_mcp/: __init__.py  categories.py  cli.py  corpus.py  crawler.py  frontmatter.py  index.py  ingester.py  manifest.py  models.py  paths.py  pipeline.py  server.py  sitemap.py
tests/: test_categories.py  test_chrome.py  test_crawler.py  test_index.py  test_ingester.py  test_pipeline.py  test_server_smoke.py  test_sitemap.py  test_stale_index.py
