[project]
name = "docs-to-mcp"
version = "0.1.0"
description = "Crawl a documentation site with Firecrawl and expose it as a focused MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=1.0.0",
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
docs-to-mcp = "docs_to_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_to_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
